--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -114,6 +114,28 @@
     padding: 0;
     background-color: #131d3a;
     z-index: 100;
+    animation: 2s anim-lineDown ease-in-out 1;
+}
+
+@keyframes anim-lineDown {
+    0% {
+        opacity: 0;
+        transform: translateY(-80%);
+    }
+
+    20% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 1;
+        transform: translateY(0%);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0%);
+    }
 }
 
 .more-btns{
